refactor: remove transfer code
